# kumix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  components.json  lingui.config.ts  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/db/: migrate.rs  mod.rs
apps/desktop/src/app/: App.tsx  (+2 more)
apps/docs-site/: README.md
apps/web/: index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
apps/web/src/: lingui.d.ts  main.tsx  styles.css
docs/: architecture.md  e2ee.md  plugin-system.md  roadmap.md  threat-model.md  workspace-collections-rooms.md
extensions/: README.md  manifest.schema.json
extensions/proc/markdown-renderer/: manifest.json  worker.ts
extensions/proc/mermaid-renderer/: manifest.json  worker.ts
extensions/proc/theme-default/: manifest.json  worker.ts
extensions/proc/wasm-demo/: manifest.json  worker.ts
infra/: README.md
plugins/: README.md
plugins/github-unfurl/: README.md
plugins/gitlab-unfurl/: README.md
plugins/jitsi-provider/: README.md
plugins/markdown-renderer/: README.md
plugins/mermaid-renderer/: README.md
policies/: README.md
policies/defaults/: policy.dev.json  policy.strict.json
policies/schemas/: policy.schema.json
(+8 files in other folders)
